recaptcha basic library adding

--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,10 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff" />
 
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
-
-    <title>Three Ring Design - Development, Design, ADA Compliance.  Single page powered by React.</title>
+    <title>Three Ring Design - Development, Design, ADA Compliance.
+      Single page and other features powered by React.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
